src/test/ui/feature-gate-placement-expr.stderr
error[E0658]: placement-in expression syntax is experimental and subject to change. (see issue #27779)
  --> $DIR/feature-gate-placement-expr.rs:24:13
   |
24 |     let x = HEAP <- 'c'; //~ ERROR placement-in expression syntax is experimental
   |             ^^^^^^^^^^^
   |
   = help: add #![feature(placement_in_syntax)] to the crate attributes to enable

error: aborting due to previous error

